# ParallelProgrammingWork

./: .gitignore  CMakeLists.txt  main.c
exemplo/: Makefile  README.md  main.cpp  person.cpp  person.h  restroom.cpp  restroom.h
libs/SDL2/x86_64-w64-mingw32/lib/cmake/SDL2/: sdl2-config.cmake
src/: banheiro.c  banheiro.h  pessoa.c  pessoa.h  queue.c  queue.h
